--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -4,6 +4,11 @@
         max-width: 100%;
     }
 
+    #mode {
+        top: 1rem;
+	    right: 0rem;
+    }
+
     #menu{
         display: none;
     }
@@ -17,6 +22,14 @@
 		display: block;
 		flex: 1 1 100%;
 	}
+
+    .open li:first-of-type {
+        margin-top: 0px;
+    }
+
+    .button {
+        left: 50%;
+    }
     
     .main-info, .company{
         display: grid;
